feat: Enhance study session functionality with new modes and UI improvements
- Refactor StudySessionState to include currentIndex, totalCount, progressPercent, isFrontVisible, and playingFlashcardId.
- Implement new study modes: Fill, Guess, Match, Recall, and Review with dedicated UI components.
- Add audio playback functionality and visual indicators for audio status in review mode.
- Improve navigation logic with canGoPrevious and canGoNext properties.
- Update localization files for new tooltips and messages related to study modes.
- Introduce unit tests for StudySessionController to ensure stability and correctness in various scenarios.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1021,6 +1021,18 @@
   "@flashcardsCloseTooltip": {
     "description": "Tooltip for close action on flashcard screens."
   },
+  "flashcardsBackTooltip": "Back",
+  "@flashcardsBackTooltip": {
+    "description": "Tooltip for back action on flashcard study screens."
+  },
+  "flashcardsStudyTextScaleTooltip": "Text size",
+  "@flashcardsStudyTextScaleTooltip": {
+    "description": "Tooltip for text size action in study app bar."
+  },
+  "flashcardsStudyTextScaleToast": "Text size settings are not available yet.",
+  "@flashcardsStudyTextScaleToast": {
+    "description": "Toast shown when text size action is tapped."
+  },
   "flashcardsPreviousTooltip": "Previous card",
   "@flashcardsPreviousTooltip": {
     "description": "Tooltip for previous card action in flip study screen."
