feat: add match session tiles and states tables with constraints
- Created `match_session_tiles` table with necessary fields and constraints.
- Created `match_session_states` table with foreign keys and constraints.
- Added unique constraints and indexes for efficient querying.

feat: seed reference data for folders, decks, and flashcards

- Implemented seeding for folders, decks, and flashcards with demo data.
- Enabled seeding via Flyway placeholder for easy testing.

test: add integration tests for study session functionality

- Implemented integration tests for starting review sessions and matching mode.
- Ensured proper cleanup of test data before each test.

feat: implement study session models and API service

- Created models for study session requests and responses.
- Developed `StudySessionApiService` to handle API interactions for study sessions.
- Defined repository interface for study session operations.

feat: add Riverpod provider for study session repository

- Implemented Riverpod provider for `StudySessionRepository` to manage state and dependencies.

--- a/learn-wire-api-service/src/main/resources/messages.properties
+++ b/learn-wire-api-service/src/main/resources/messages.properties
@@ -11,6 +11,14 @@ deck.error.duplicateName=Deck name already exists in this folder.
 deck.error.folderHasSubfolders=Cannot create a deck because this folder already contains subfolders.
 flashcard.error.notFound=Flashcard not found.
 flashcard.error.deckNotFound=Cannot create flashcards because the deck does not exist.
+study.error.sessionNotFound=Study session not found.
+study.error.sessionNotActive=Study session is not active.
+study.error.matchStateNotFound=Match session state not found.
+study.error.matchTileNotFound=Match tile not found.
+study.error.matchTileSideInvalid=Match tile side is invalid for this event.
+study.error.deckHasNoFlashcards=Deck has no flashcards for study mode.
+study.error.matchRequiresMoreFlashcards=Match mode requires at least 2 flashcards.
+study.error.eventNotSupported=Study event is not supported for this mode.
 
 folder.validation.name.required=Folder name is required.
 folder.validation.name.tooLong=Folder name is too long.
@@ -38,3 +46,10 @@ deck.validation.page.invalid=Page must be greater than or equal to zero.
 deck.validation.size.invalid=Size must be between 1 and 100.
 deck.validation.sortBy.invalid=Sort field is invalid.
 deck.validation.sortDirection.invalid=Sort direction is invalid.
+study.validation.mode.invalid=Study mode is invalid.
+study.validation.seed.invalid=Seed must be greater than or equal to zero.
+study.validation.eventType.invalid=Study event type is invalid.
+study.validation.event.clientEventId.required=Client event id is required.
+study.validation.event.clientSequence.invalid=Client sequence must be greater than or equal to zero.
+study.validation.event.targetTileId.required=Target tile id is required for this event.
+study.validation.event.targetIndex.invalid=Target index is invalid for this event.
