feat: Enhance study session functionality with mode state tracking
- Added `StudySessionModeStateEntity` to represent the state of each study mode within a session.
- Introduced `StudySessionModeStateRepository` for database interactions related to study mode states.
- Updated `StudySessionIntegrationTest` to include tests for new mode state functionality.
- Modified `StudyConstants` to define the required study mode count.
- Enhanced `StudyMode` to support a cycle of study modes and added utility functions for managing mode transitions.
- Updated `StudySessionArgs` to include cycle modes and index for tracking current mode.
- Improved `StudySessionResponseModel` to return completed mode counts and session completion status.
- Updated UI components to reflect the current study mode cycle and progress.
- Added localization for cycle progress and next mode labels.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -932,6 +932,27 @@
       }
     }
   },
+  "flashcardsStudyCycleProgressLabel": "Completed modes: {completedModeCount}/{requiredModeCount}",
+  "@flashcardsStudyCycleProgressLabel": {
+    "description": "Cycle progress label in completed study state.",
+    "placeholders": {
+      "completedModeCount": {
+        "type": "int"
+      },
+      "requiredModeCount": {
+        "type": "int"
+      }
+    }
+  },
+  "flashcardsStudyNextModeLabel": "Next mode: {modeLabel}",
+  "@flashcardsStudyNextModeLabel": {
+    "description": "Button label for continuing to the next study mode.",
+    "placeholders": {
+      "modeLabel": {
+        "type": "String"
+      }
+    }
+  },
   "flashcardsStudyRestartLabel": "Restart",
   "@flashcardsStudyRestartLabel": {
     "description": "Action label to restart study session."
