--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -985,6 +985,15 @@
   "@flashcardsStudyRecallRememberedLabel": {
     "description": "Button label for recall mode when learner remembers the answer."
   },
+  "flashcardsStudyRecallShowCountdownLabel": "Show ({seconds}s)",
+  "@flashcardsStudyRecallShowCountdownLabel": {
+    "description": "Action label in recall mode before revealing answer.",
+    "placeholders": {
+      "seconds": {
+        "type": "int"
+      }
+    }
+  },
   "flashcardsStudyFillInputLabel": "Your answer",
   "@flashcardsStudyFillInputLabel": {
     "description": "Input label in fill mode."
