feat: Add fill mode functionality with help and check buttons in flashcard study session

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1002,6 +1002,14 @@
   "@flashcardsStudyFillInputHint": {
     "description": "Input hint in fill mode."
   },
+  "flashcardsStudyFillHelpLabel": "Help",
+  "@flashcardsStudyFillHelpLabel": {
+    "description": "Help button label in fill mode."
+  },
+  "flashcardsStudyFillCheckLabel": "Check",
+  "@flashcardsStudyFillCheckLabel": {
+    "description": "Check button label in fill mode."
+  },
   "flashcardsStudySubmitLabel": "Submit",
   "@flashcardsStudySubmitLabel": {
     "description": "Submit button label in study modes."
