--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -1010,6 +1010,10 @@
   "@flashcardsStudyFillCheckLabel": {
     "description": "Check button label in fill mode."
   },
+  "flashcardsStudyFillContinueLabel": "Nhập lại",
+  "@flashcardsStudyFillContinueLabel": {
+    "description": "Continue button label in fill mode after incorrect answer confirmation."
+  },
   "flashcardsStudySubmitLabel": "Trả lời",
   "@flashcardsStudySubmitLabel": {
     "description": "Submit button label in study modes."
