--- a/learn-wire-api-service/src/main/resources/messages.properties
+++ b/learn-wire-api-service/src/main/resources/messages.properties
@@ -11,6 +11,10 @@ deck.error.duplicateName=Deck name already exists in this folder.
 deck.error.folderHasSubfolders=Cannot create a deck because this folder already contains subfolders.
 flashcard.error.notFound=Flashcard not found.
 flashcard.error.deckNotFound=Cannot create flashcards because the deck does not exist.
+auth.error.emailAlreadyExists=Email already exists.
+auth.error.invalidCredentials=Email or password is incorrect.
+auth.error.refreshTokenInvalid=Refresh token is invalid or expired.
+auth.error.unauthorized=Authentication is required.
 study.error.sessionNotFound=Study session not found.
 study.error.sessionNotActive=Study session is not active.
 study.error.matchStateNotFound=Match session state not found.
@@ -46,6 +50,14 @@ deck.validation.page.invalid=Page must be greater than or equal to zero.
 deck.validation.size.invalid=Size must be between 1 and 100.
 deck.validation.sortBy.invalid=Sort field is invalid.
 deck.validation.sortDirection.invalid=Sort direction is invalid.
+auth.validation.email.required=Email is required.
+auth.validation.email.invalid=Email format is invalid.
+auth.validation.email.tooLong=Email is too long.
+auth.validation.password.required=Password is required.
+auth.validation.password.tooShort=Password must be at least 8 characters.
+auth.validation.password.tooLong=Password is too long.
+auth.validation.displayName.tooLong=Display name is too long.
+auth.validation.refreshToken.required=Refresh token is required.
 study.validation.mode.invalid=Study mode is invalid.
 study.validation.seed.invalid=Seed must be greater than or equal to zero.
 study.validation.eventType.invalid=Study event type is invalid.
