--- a/learn-wire-api-service/src/main/resources/messages.properties
+++ b/learn-wire-api-service/src/main/resources/messages.properties
@@ -56,8 +56,15 @@ auth.validation.email.tooLong=Email is too long.
 auth.validation.password.required=Password is required.
 auth.validation.password.tooShort=Password must be at least 8 characters.
 auth.validation.password.tooLong=Password is too long.
+auth.validation.displayName.required=Display name is required.
 auth.validation.displayName.tooLong=Display name is too long.
 auth.validation.refreshToken.required=Refresh token is required.
+auth.validation.themeMode.required=Theme mode is required.
+auth.validation.themeMode.invalid=Theme mode is invalid.
+auth.validation.study.autoPlayAudio.required=Study auto play audio setting is required.
+auth.validation.study.cardsPerSession.required=Study cards per session is required.
+auth.validation.study.cardsPerSession.min=Study cards per session must be at least 5.
+auth.validation.study.cardsPerSession.max=Study cards per session must be at most 50.
 study.validation.mode.invalid=Study mode is invalid.
 study.validation.seed.invalid=Seed must be greater than or equal to zero.
 study.validation.eventType.invalid=Study event type is invalid.
