feat(flashcards): add language support for flashcard content and decks
- Add backend infrastructure for managing languages, including a new `languages` table, API endpoint (`/languages`), and associated services.
- Introduce `front_lang_code` and `back_lang_code` to flashcards, and `term_lang_code` to decks, with corresponding database migrations.
- Update flashcard creation/update logic to set a deck's primary language (`term_lang_code`) based on the first flashcard's front language, and enforce this language for subsequent flashcards.
- Implement a Flutter `LanguageRepository` and `LanguagesController` (Riverpod) to fetch and manage language data from the API.
- Enhance the flashcard editor dialog with language selection dropdowns for both front and back text, which are pre-filled or disabled based on the deck's primary language.
- Add new localization strings for language selection UI elements.

--- a/learn-wire-api-service/src/main/resources/messages.properties
+++ b/learn-wire-api-service/src/main/resources/messages.properties
@@ -11,6 +11,7 @@ deck.error.duplicateName=Deck name already exists in this folder.
 deck.error.folderHasSubfolders=Cannot create a deck because this folder already contains subfolders.
 flashcard.error.notFound=Flashcard not found.
 flashcard.error.deckNotFound=Cannot create flashcards because the deck does not exist.
+flashcard.error.termLangMismatch=The front language must match the deck primary language.
 auth.error.emailAlreadyExists=Email already exists.
 auth.error.invalidCredentials=Email or password is incorrect.
 auth.error.refreshTokenInvalid=Refresh token is invalid or expired.
