--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1443,5 +1443,17 @@
   "snackUnknownError": "Something went wrong. Please try again.",
   "@snackUnknownError": {
     "description": "Fallback snackbar message for unexpected errors."
+  },
+  "flashcardsLangFrontLabel": "Front language",
+  "@flashcardsLangFrontLabel": {
+    "description": "Label for the front-side language picker in flashcard editor."
+  },
+  "flashcardsLangBackLabel": "Back language",
+  "@flashcardsLangBackLabel": {
+    "description": "Label for the back-side language picker in flashcard editor."
+  },
+  "flashcardsLangAutoDetect": "Auto-detect",
+  "@flashcardsLangAutoDetect": {
+    "description": "Option shown when no language is selected (null value) in the language picker."
   }
 }
