refactor(tts): consolidate voice settings UI and enhance TTS service reliability
This commit refactors the Text-to-Speech (TTS) functionality by removing a standalone TTS test screen and integrating its core features into the user profile settings. It also improves the reliability and performance of the underlying `TtsService`.

- **feat(profile):** Integrate TTS voice configuration into profile settings.
    - Add a dedicated "Voice Settings" section within the user profile.
    - Implement UI for selecting Korean voices, adjusting speech rate, pitch, and volume.
    - Add a voice test panel with default and custom text options, including input validation.
    - Implement live preview of voice settings on slider changes and a manual "Test voice" button.
    - Ensure TTS playback is stopped when navigating away from the settings screen.

- **refactor(tts):** Enhance `TtsService` and `TtsController`.
    - Implement a warm-up mechanism in `TtsService` to reduce initial speech latency.
    - Add automatic retry logic for common speech synthesis interruption errors.
    - Introduce a fallback to the default language if a preferred voice fails to load, improving robustness.
    - Consolidate voice parameter updates into a single `applyVoiceSettings` method in `TtsController`.
    - Add a debounced live preview feature to the `TtsController` for responsive UI feedback.
    - Implement a `dispose` method in the service to clean up resources.

- **chore(routing):** Remove the standalone `/tts` route and its associated screen.
    - Update authentication and dashboard redirects to point to the main dashboard instead of the removed TTS screen.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1308,6 +1308,10 @@
   "@profileVoiceTestHint": {
     "description": "Hint for custom voice test text input."
   },
+  "profileVoiceTestCustomRequired": "Please enter custom text before testing voice.",
+  "@profileVoiceTestCustomRequired": {
+    "description": "Validation message shown when custom voice test text is empty."
+  },
   "profileVoiceTestButtonLabel": "Test voice",
   "@profileVoiceTestButtonLabel": {
     "description": "Button label to preview current voice settings."
